[package]
name = "win_desktop_duplication"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Krishna Chaitanya <kittuov@gmail.com>"]
description = "easy to use windows desktop duplication api"
license-file = "LICENSE.md"
keywords = ["GameStream", "Windows Desktop Duplication Api", "desktop capture", "screen capture"]
include = ["LICENSE.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
futures = "0.3.21"
env_logger = "0.9.0"
log = "0.4.17"

[dependencies.tokio]
version = "1.20.0"
features = [
    "rt",
    "time"
]

[dependencies.windows]
version = "0.38.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_HiDpi"
]