[package]
name = "win_desktop_duplication"
version = "0.10.4"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Krishna Chaitanya <kittuov@gmail.com>"]
description = "Simple and efficient DXGI desktop duplication api"
categories = ["rendering::graphics-api", "os::windows-apis", "asynchronous", "hardware-support"]
keywords = ["desktop", "duplication", "capture", "dxgi", "directx"]
repository = "https://github.com/rhinostream/win_desktop_duplication.git"
homepage = "https://github.com/rhinostream/win_desktop_duplication"
documentation = "https://docs.rs/win_desktop_duplication"
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
    "LISENCE.md"
]

[lib]
name = "win_desktop_duplication"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doc = true             # Is documented by default.
edition = "2021"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.


[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dev-dependencies]
env_logger = "0.9.0"

[dependencies]
futures = "0.3.21"
log = "0.4.17"

[dependencies.tokio]
version = "1.20.1"
features = [
    "rt",
    "time",
    "macros"
]

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_HiDpi"
]